New changes in the sentence of the first additional question

--- a/locale/en_US/LC_MESSAGES/voteMajorite.po
+++ b/locale/en_US/LC_MESSAGES/voteMajorite.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: voteMajorite\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-02 13:23+0100\n"
-"PO-Revision-Date: 2016-03-02 13:25+0100\n"
+"POT-Creation-Date: 2016-03-02 13:45+0100\n"
+"PO-Revision-Date: 2016-03-02 13:46+0100\n"
 "Last-Translator: Dimitri DUBOIS <dimitri.dubois@umontpellier.fr>\n"
 "Language-Team: Dimitri DUBOIS <dimitri.dubois@umontpellier.fr>\n"
 "Language: en_US\n"
@@ -70,8 +70,8 @@ msgstr ""
 
 #: /home/irtimid/Documents/travail/programmes/le2m-v2.1/le2m/parts/voteMajorite/voteMajoriteTexts.py:37
 msgid ""
-"En utilisant l'échelle ci-contre, indiquez votre niveau de certitude au "
-"moment où<br />vous avez voté, sachant que<br />1=totalement incertain et "
+"En utilisant l'échelle ci-contre, indiquez votre niveau de certitude<br />au "
+"moment où vous avez voté, sachant que<br />1=totalement incertain et "
 "10=totalement certain"
 msgstr ""
 
